Register React DevTools with Device DevTools for mobile support

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="device/Environment.js"></script>
     <script src="agents/ReactInspectorVersion.js"></script>
     <script src="agents/InspectorBackend.js"></script>
     <script src="agents/ReactInspectorAgent.js"></script>
