use eslint and fix lint errors.

--- a/main.html
+++ b/main.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <!-- include plugins start -->
     <script src="plugins/bananaslug/build/devtools-page-script.js"></script>
+    <!-- include plugins end -->
+
     <script src="device/Environment.js"></script>
     <script src="agents/ReactInspectorVersion.js"></script>
     <script src="agents/InspectorBackend.js"></script>
