update text and documents

--- a/plugins/bananaslug/src/htmls/devpanel.html
+++ b/plugins/bananaslug/src/htmls/devpanel.html
@@ -1,14 +1,18 @@
 <!doctype>
 <html>
+  <head>
+    <style>
+      label {
+        display: block;
+        font-size: 13px;
+      }
+    </style>
+  </head>
   <body>
     <label>
       <input type="checkbox" id="checkbox" />
-      trace React updates
+      Trace React components updates
     </label>
-    <div>
-      <img src="mascot.jpg" width="213" height="236" />
-    </div>
-    <script src="devpanel.bundle.js"></script>
   </body>
 </html>
 
