--- a/chrome/panel.html
+++ b/chrome/panel.html
@@ -14,6 +14,8 @@
             body {
                 margin: 0;
                 padding: 0;
+                flex: 1;
+                display: flex;
             }
             #container {
                 display: flex;
@@ -21,7 +23,7 @@
             }
         </style>
     </head>
-    <body style="flex: 1; display: flex">
+    <body>
         <!-- main react mount point -->
         <div id="container">No react found on the page.</div>
         <script src="./build/panel.js"></script>
