--- a/shells/chrome/main.html
+++ b/shells/chrome/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <script src="main.js"></script>
+        <script src="./build/main.js"></script>
     </head>
     <body>
         <h1>Hello!</h1>
