now running on JSCore!!!

--- a/shells/electron/index.html
+++ b/shells/electron/index.html
@@ -32,9 +32,9 @@
     </head>
     <body>
         <div id="container">
-            <h1>Connecting to React Native</h1>
+            <h1>Waiting for a connection from React Native</h1>
         </div>
-        <script src="panel/node.js"></script>
+        <script src="node/index.js"></script>
         <script src="build/panel.js"></script>
     </body>
 </html>
