firefox uses new panel, has slightly better styling

--- a/shells/firefox/data/panel.html
+++ b/shells/firefox/data/panel.html
@@ -21,6 +21,10 @@
                 right: 0;
                 bottom: 0;
                 background-color: white;
+                font-family: sans-serif;
+            }
+            #container h1 {
+                margin: 20px auto;
             }
             #logs {
                 position: fixed;
