move electron shell to the refactored panel

--- a/shells/electron/index.html
+++ b/shells/electron/index.html
@@ -37,6 +37,7 @@
                 color: #aaa;
             }
         </style>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <div id="container">
@@ -45,7 +46,6 @@
         <script>
             require('babel-core').register({stage: 0});
             require('./node');
-            require('./panel/run');
         </script>
     </body>
 </html>
