show loading text while waiting for page

--- a/shells/firefox/data/panel.html
+++ b/shells/firefox/data/panel.html
@@ -23,8 +23,9 @@
                 background-color: white;
                 font-family: sans-serif;
             }
-            #container h1 {
+            #message {
                 margin: 20px auto;
+                color: #ccc;
             }
             #logs {
                 position: fixed;
