run the backend in an iframe in the <head>

--- a/test/example/sink.html
+++ b/test/example/sink.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <script src="build/sink.js"></script>
+        <script>
+            window.Map = null;
+            Object.create = null;
+            window.Set = null;
+            window.WeakMap = null;
+        </script>
     </body>
 </html>
 
