simplify Object.create shim

--- a/test/example/sink.html
+++ b/test/example/sink.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <script src="build/sink.js"></script>
+        <script>
+            Object.create = null;
+            Map = null;
+            Set = null;
+            WeakMap = null;
+        </script>
     </body>
 </html>
 
