document the insulation magic that happens with Object.create, Map, etc.

--- a/test/example/sink.html
+++ b/test/example/sink.html
@@ -7,6 +7,8 @@
     <body>
         <script src="build/sink.js"></script>
         <script>
+            // Test to make sure the backend doesn't depend on Object.create
+            // or ES6 globals
             Object.create = null;
             Map = null;
             Set = null;
