--- a/shells/plain/index.html
+++ b/shells/plain/index.html
@@ -13,6 +13,7 @@
                 height: 500px;
             }
             body {
+                margin: 0;
                 display: flex;
                 flex-direction: column;
                 position: absolute;
