--- a/shells/plain/index.html
+++ b/shells/plain/index.html
@@ -7,6 +7,7 @@
             #target {
                 flex: 1;
                 border: none;
+                border-bottom: 1px solid #ccc;
             }
             #container {
                 display: flex;
