--- a/shells/plain/index.html
+++ b/shells/plain/index.html
@@ -10,7 +10,7 @@
             }
             #container {
                 display: flex;
-                height: 500px;
+                height: 400px;
             }
             body {
                 margin: 0;
@@ -21,6 +21,8 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
+                margin: 0;
+                padding: 0;
             }
         </style>
     </head>
