--- a/shells/chrome/panel.html
+++ b/shells/chrome/panel.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <!-- main react mount point -->
-        <div id="container">No react found on the page.</div>
+        <div id="container">Unable to find React on the page.</div>
         <script src="./build/panel.js"></script>
     </body>
 </html>
