--- a/shells/firefox/data/panel.html
+++ b/shells/firefox/data/panel.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html>
     <head>
         <meta charset=utf8>
@@ -13,6 +13,10 @@
                 flex: 1;
                 display: flex;
             }
+            h1 {
+                font-size: 24px;
+                margin: 16px 0;
+            }
             #container {
                 display: flex;
                 position: fixed;
@@ -24,8 +28,10 @@
                 font-family: sans-serif;
             }
             #message {
-                margin: 20px auto;
-                color: #ccc;
+                color: #888;
+                flex: 1;
+                margin: 46px 30px;
+                text-align: center;
             }
             #logs {
                 position: fixed;
