--- a/shells/chrome/panel.html
+++ b/shells/chrome/panel.html
@@ -16,10 +16,12 @@
                 padding: 0;
                 flex: 1;
                 display: flex;
+                width: 100%;
             }
             #container {
                 display: flex;
                 flex: 1;
+                width: 100%;
             }
         </style>
     </head>
