--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -79,7 +79,17 @@
             $('#byip').value = '<' + 'script src="http://' + localIp + ':' + port + '"><' + '/script>';
             $('#localhost').onclick = selectAll;
             $('#byip').onclick = selectAll;
-            window.server = require('./build/standalone.js')
+
+            var devtools;
+            try {
+                devtools = require('react-devtools-core/standalone');
+            } catch (err) {
+                alert(
+                    err.toString() +
+                    '\n\nDid you run `npm run build` and `npm install` in packages/react-devtools-core?'
+                );
+            }
+            window.server = devtools
                 .setContentDOMNode(document.getElementById('container'))
                 .startServer(port);
         </script>
