--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -91,6 +91,9 @@
             }
             window.server = devtools
                 .setContentDOMNode(document.getElementById('container'))
+                .setStatusListener(function(status) {
+                    document.getElementById('loading-status').innerText = status;
+                })
                 .startServer(port);
         </script>
     </body>
