[Electron] Don't reconnect inactive apps

--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -59,7 +59,7 @@
                 <h2>Waiting for React to connect…</h2>
                 <div>
                     <h4>React Native</h4>
-                    <div>Your app will connect automatically in a few seconds.</div>
+                    <div>The active app will automatically connect in a few seconds.</div>
                     <br />
                     <h4>React DOM</h4>
                     <div>
