Fix Firefox addon

--- a/shells/firefox/data/panel.html
+++ b/shells/firefox/data/panel.html
@@ -43,6 +43,8 @@
     </head>
     <body>
         <div id="container"></div>
+        <script src='build/react.min.js'></script>
+        <script src='build/react-dom.min.js'></script>
         <script src='build/panel.js'></script>
     </body>
 </html>
