Nit: capitalize Tools

--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>React Developer tools</title>
+        <title>React Developer Tools</title>
         <meta charset=utf8>
         <style>
             html {
