--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>React Electron App</title>
+        <title>React Developer Tools</title>
         <meta charset=utf8>
         <style>
             html {
@@ -85,10 +85,12 @@
                 this.selectionStart = 0;
                 this.selectionEnd = this.value.length;
             }
-            $('#localhost').value = '<' + 'script src="http://localhost:' + port + '"><' + '/script>';
-            $('#byip').value = '<' + 'script src="http://' + localIp + ':' + port + '"><' + '/script>';
-            $('#localhost').onclick = selectAll;
-            $('#byip').onclick = selectAll;
+            var $localhost = $('#localhost');
+            var $byIp = $('#byip');
+            $localhost.value = '<' + 'script src="http://localhost:' + port + '"><' + '/script>';
+            $byIp.value = '<' + 'script src="http://' + localIp + ':' + port + '"><' + '/script>';
+            $localhost.onclick = selectAll;
+            $byIp.onclick = selectAll;
 
             var devtools;
             try {
