--- a/shells/chrome/main.html
+++ b/shells/chrome/main.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script src="./build/main.js"></script>
     </head>
     <body>
