Set panel to take full height in Firefox

--- a/shells/chrome/panel.html
+++ b/shells/chrome/panel.html
@@ -10,6 +10,7 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
+                height: 100%;
             }
             body {
                 margin: 0;
