--- a/shells/chrome/popups/production.html
+++ b/shells/chrome/popups/production.html
@@ -1,7 +1,7 @@
 <script src="links.js"></script>
 <style>body { font-size: 14px; }</style>
 <p style="min-width: 450px">
-  <b>This page is using React. &#x2705;</b>
+  <b>This page is using the production build of React. &#x2705;</b>
   <br />
   Open the developer tools, and the React tab will appear to the right.
 </p>
