--- a/shells/chrome/popups/outdated.html
+++ b/shells/chrome/popups/outdated.html
@@ -1,1 +1,11 @@
-<!-- todo -->
+<script src="links.js"></script>
+<style>body { font-size: 14px; }</style>
+<p style="min-width: 450px">
+  <b>This page is using an outdated version of React. &#8987;</b>
+</p>
+<hr />
+<p style="min-width: 450px">
+  We recommend updating to ensure that you receive important bugfixes and performance improvements.
+  <br />
+  Refer to the <a href="https://facebook.github.io/react/blog/">React blog</a> for upgrade instructions.
+</p>
