--- a/shells/chrome/popups/outdated.html
+++ b/shells/chrome/popups/outdated.html
@@ -5,7 +5,8 @@
 </p>
 <hr />
 <p style="min-width: 450px">
-  We recommend updating to ensure that you receive important bugfixes and performance improvements.
+  We recommend updating React to ensure that you receive important bugfixes and performance improvements.
   <br />
-  Refer to the <a href="https://facebook.github.io/react/blog/">React blog</a> for upgrade instructions.
+  <br />
+  You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/">React blog</a>.
 </p>
