Try to work around Chrome bugs

--- a/shells/chrome/popups/outdated.html
+++ b/shells/chrome/popups/outdated.html
@@ -1,10 +1,16 @@
-<script src="links.js"></script>
-<style>body { font-size: 14px; }</style>
-<p style="min-width: 450px">
+<script src="shared.js"></script>
+<style>
+  html, body {
+    font-size: 14px;
+    min-width: 450px;
+    min-height: 117px;
+  }
+</style>
+<p>
   <b>This page is using an outdated version of React. &#8987;</b>
 </p>
 <hr />
-<p style="min-width: 450px">
+<p>
   We recommend updating React to ensure that you receive important bugfixes and performance improvements.
   <br />
   <br />
