--- a/shells/chrome/popups/not-detected.html
+++ b/shells/chrome/popups/not-detected.html
@@ -1,6 +1,12 @@
-<script src="links.js"></script>
-<style>body { font-size: 14px; }</style>
-<p style="min-width: 400px">
+<script src="shared.js"></script>
+<style>
+  html, body {
+    font-size: 14px;
+    min-width: 400px;
+    min-height: 33px;
+  }
+</style>
+<p>
   <b>React was not detected on this page.</b>
   <br />
   If this seems wrong, follow the <a href="https://github.com/facebook/react-devtools/blob/master/README.md#the-react-tab-doesnt-show-up">troubleshooting instructions</a>.
