--- a/shells/chrome/popups/unminified.html
+++ b/shells/chrome/popups/unminified.html
@@ -1,12 +1,18 @@
-<script src="links.js"></script>
-<style>body { font-size: 14px; }</style>
-<p style="min-width: 450px">
+<script src="shared.js"></script>
+<style>
+  html, body {
+    font-size: 14px;
+    min-width: 450px;
+    min-height: 133px;
+  }
+</style>
+<p>
   <b>This page is using an unminified build of React. &#x1f6a7;</b>
   <br />
   Open the developer tools, and the React tab will appear to the right.
 </p>
 <hr />
-<p style="min-width: 450px">
+<p>
   The React build on this page appears to be unminified.
   <br />
   This makes its size larger, and causes React to run slower.
