--- a/shells/chrome/popups/production.html
+++ b/shells/chrome/popups/production.html
@@ -1,6 +1,12 @@
-<script src="links.js"></script>
-<style>body { font-size: 14px; }</style>
-<p style="min-width: 450px">
+<script src="shared.js"></script>
+<style>
+  html, body {
+    font-size: 14px;
+    min-width: 430px;
+    min-height: 39px;
+  }
+</style>
+<p>
   <b>This page is using the production build of React. &#x2705;</b>
   <br />
   Open the developer tools, and the React tab will appear to the right.
