--- a/shells/chrome/popups/outdated.html
+++ b/shells/chrome/popups/outdated.html
@@ -2,17 +2,20 @@
 <style>
   html, body {
     font-size: 14px;
-    min-width: 370px;
+    min-width: 430px;
     min-height: 117px;
   }
 </style>
 <p>
   <b>This page is using an outdated version of React. &#8987;</b>
 </p>
-<hr />
 <p>
   We recommend updating React to ensure that you receive important bugfixes and performance improvements.
   <br />
   <br />
   You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/">React blog</a>.
+</p>
+<hr />
+<p>
+  Open the developer tools, and the React tab will appear to the right.
 </p>
