Tweak the message

--- a/shells/chrome/popups/not-detected.html
+++ b/shells/chrome/popups/not-detected.html
@@ -7,7 +7,7 @@
   }
 </style>
 <p>
-  <b>React was not detected on this page.</b>
+  <b>This page doesn&rsquo;t appear to be using React.</b>
   <br />
   If this seems wrong, follow the <a href="https://github.com/facebook/react-devtools/blob/master/README.md#the-react-tab-doesnt-show-up">troubleshooting instructions</a>.
 </p>
