Use the same loading and error messages for both Firefox and Chrome

--- a/shells/chrome/panel.html
+++ b/shells/chrome/panel.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <!-- main react mount point -->
-        <div id="container">Unable to find React on the page.</div>
+        <div id="container"></div>
         <script src="./build/panel.js"></script>
     </body>
 </html>
