--- a/shells/chrome/panel.html
+++ b/shells/chrome/panel.html
@@ -25,8 +25,8 @@
         </style>
     </head>
     <body>
-        <!-- main react mount point -->
-        <div id="container">Unable to find React on the page.</div>
+        <div id="container"></div>
+
         <script src="./build/panel.js"></script>
     </body>
 </html>
