Added color picker and realtime preview panel to theme editor

--- a/shells/plain/index.html
+++ b/shells/plain/index.html
@@ -27,8 +27,7 @@
             }
 
             body.devtools-bottom #container {
-                height:  400px;
-                max-height: 50%;
+                height: 100%;
             }
 
             body.devtools-bottom #target {
