Fixed Preview font to be mono

--- a/shells/plain/index.html
+++ b/shells/plain/index.html
@@ -27,7 +27,8 @@
             }
 
             body.devtools-bottom #container {
-                height: 100%;
+                height: 400px;
+                max-height: 50%;
             }
 
             body.devtools-bottom #target {
