Make the browser action popup look a bit better
- Enable `browser_style` for Firefox 48+
  https://developer.mozilla.org/en-US/Add-ons/WebExtensions/manifest.json/browser_action#Syntax

- Set consistent body and text spacing

- Set the width of `<hr>` to 100% for Firefox compatibility

- Replace unnecessary link opener JavaScript with `target=“_blank”`

--- a/shells/webextension/popups/development.html
+++ b/shells/webextension/popups/development.html
@@ -1,9 +1,19 @@
 <script src="shared.js"></script>
 <style>
-  html, body {
+  body {
     font-size: 14px;
+    line-height: 1.5;
+    margin: 8px;
     min-width: 460px;
     min-height: 101px;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  hr {
+    width: 100%;
   }
 </style>
 <p>
@@ -11,8 +21,9 @@
 </p>
 <p>
   Note that the development build is not suitable for production.
-  <br />
-  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build">use the production build</a> before deployment.
+</p>
+<p>
+  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build" target="_blank">use the production build</a> before deployment.
 </p>
 <hr />
 <p>
