--- a/shells/webextension/popups/disabled.html
+++ b/shells/webextension/popups/disabled.html
@@ -1,13 +1,20 @@
 <script src="shared.js"></script>
 <style>
-  html, body {
+  body {
     font-size: 14px;
+    line-height: 1.5;
+    margin: 8px;
     min-width: 410px;
     min-height: 33px;
+  }
+
+  p {
+    margin: 0;
   }
 </style>
 <p>
   <b>This page doesn&rsquo;t appear to be using React.</b>
-  <br />
-  If this seems wrong, follow the <a href="https://github.com/facebook/react-devtools/blob/master/README.md#the-react-tab-doesnt-show-up">troubleshooting instructions</a>.
+ </p>
+ <p>
+  If this seems wrong, follow the <a href="https://github.com/facebook/react-devtools/blob/master/README.md#the-react-tab-doesnt-show-up" target="_blank">troubleshooting instructions</a>.
 </p>
