--- a/shells/webextension/popups/outdated.html
+++ b/shells/webextension/popups/outdated.html
@@ -1,9 +1,19 @@
 <script src="shared.js"></script>
 <style>
-  html, body {
+  body {
     font-size: 14px;
+    line-height: 1.5;
+    margin: 8px;
     min-width: 460px;
     min-height: 117px;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  hr {
+    width: 100%;
   }
 </style>
 <p>
@@ -11,9 +21,9 @@
 </p>
 <p>
   We recommend updating React to ensure that you receive important bugfixes and performance improvements.
-  <br />
-  <br />
-  You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/">React blog</a>.
+</p>
+<p>
+  You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/" target="_blank">React blog</a>.
 </p>
 <hr />
 <p>
