--- a/shells/webextension/popups/production.html
+++ b/shells/webextension/popups/production.html
@@ -1,13 +1,20 @@
 <script src="shared.js"></script>
 <style>
-  html, body {
+  body {
     font-size: 14px;
+    line-height: 1.5;
+    margin: 8px;
     min-width: 460px;
     min-height: 39px;
+  }
+
+  p {
+    margin: 0;
   }
 </style>
 <p>
   <b>This page is using the production build of React. &#x2705;</b>
-  <br />
+</p>
+<p>
   Open the developer tools, and the React tab will appear to the right.
 </p>
