Undo the non-essential changes

--- a/shells/webextension/popups/deadcode.html
+++ b/shells/webextension/popups/deadcode.html
@@ -1,15 +1,9 @@
 <script src="shared.js"></script>
 <style>
-  body {
+  html, body {
     font-size: 14px;
-    line-height: 1.5;
-    margin: 8px;
     min-width: 460px;
     min-height: 133px;
-  }
-
-  p {
-    margin: 0;
   }
 
   hr {
@@ -21,12 +15,12 @@
 </p>
 <p>
   The React build on this page includes both development and production versions because dead code elimination has not been applied correctly.
-</p>
-<p>
+  <br />
+  <br />
   This makes its size larger, and causes React to run slower.
-</p>
-<p>
-  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build" target="_blank">set up dead code elimination</a> before deployment.
+  <br />
+  <br />
+  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build">set up dead code elimination</a> before deployment.
 </p>
 <hr />
 <p>
