--- a/shells/webextension/popups/development.html
+++ b/shells/webextension/popups/development.html
@@ -1,15 +1,9 @@
 <script src="shared.js"></script>
 <style>
-  body {
+  html, body {
     font-size: 14px;
-    line-height: 1.5;
-    margin: 8px;
     min-width: 460px;
     min-height: 101px;
-  }
-
-  p {
-    margin: 0;
   }
 
   hr {
@@ -21,9 +15,8 @@
 </p>
 <p>
   Note that the development build is not suitable for production.
-</p>
-<p>
-  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build" target="_blank">use the production build</a> before deployment.
+  <br />
+  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build">use the production build</a> before deployment.
 </p>
 <hr />
 <p>
