--- a/shells/webextension/popups/outdated.html
+++ b/shells/webextension/popups/outdated.html
@@ -1,15 +1,9 @@
 <script src="shared.js"></script>
 <style>
-  body {
+  html, body {
     font-size: 14px;
-    line-height: 1.5;
-    margin: 8px;
     min-width: 460px;
     min-height: 117px;
-  }
-
-  p {
-    margin: 0;
   }
 
   hr {
@@ -21,9 +15,9 @@
 </p>
 <p>
   We recommend updating React to ensure that you receive important bugfixes and performance improvements.
-</p>
-<p>
-  You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/" target="_blank">React blog</a>.
+  <br />
+  <br />
+  You can find the upgrade instructions on the <a href="https://facebook.github.io/react/blog/">React blog</a>.
 </p>
 <hr />
 <p>
