Make the browser action popup look better by enabling `browser_style` (#877)
* Make the browser action popup look a bit better

- Enable `browser_style` for Firefox 48+
  https://developer.mozilla.org/en-US/Add-ons/WebExtensions/manifest.json/browser_action#Syntax

- Set consistent body and text spacing

- Set the width of `<hr>` to 100% for Firefox compatibility

- Replace unnecessary link opener JavaScript with `target=“_blank”`

* Undo the non-essential changes

--- a/shells/webextension/popups/disabled.html
+++ b/shells/webextension/popups/disabled.html
@@ -5,6 +5,10 @@
     min-width: 410px;
     min-height: 33px;
   }
+
+  hr {
+    width: 100%;
+  }
 </style>
 <p>
   <b>This page doesn&rsquo;t appear to be using React.</b>
