--- a/shells/webextension/popups/outdated.html
+++ b/shells/webextension/popups/outdated.html
@@ -5,6 +5,10 @@
     min-width: 460px;
     min-height: 117px;
   }
+
+  hr {
+    width: 100%;
+  }
 </style>
 <p>
   <b>This page is using an outdated version of React. &#8987;</b>
