--- a/shells/webextension/popups/production.html
+++ b/shells/webextension/popups/production.html
@@ -5,6 +5,10 @@
     min-width: 460px;
     min-height: 39px;
   }
+
+  hr {
+    width: 100%;
+  }
 </style>
 <p>
   <b>This page is using the production build of React. &#x2705;</b>
