--- a/shells/webextension/popups/unminified.html
+++ b/shells/webextension/popups/unminified.html
@@ -5,6 +5,10 @@
     min-width: 460px;
     min-height: 133px;
   }
+
+  hr {
+    width: 100%;
+  }
 </style>
 <p>
   <b>This page is using an unminified build of React. &#x1f6a7;</b>
