--- a/test/example/sink.html
+++ b/test/example/sink.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf8">
-        <title>Kitchen Sink</title>
-    </head>
-    <body>
-        <script src="build/sink.js"></script>
-        <script>
-            // Test to make sure the backend doesn't depend on Object.create
-            // or ES6 globals
-            Object.create = null;
-            Map = null;
-            Set = null;
-            WeakMap = null;
-        </script>
-    </body>
+
+  <head>
+    <meta charset="utf8">
+    <title>Kitchen Sink</title>
+  </head>
+
+  <body>
+    <h1>Hello facebook</h1>
+    <script src="build/sink.js"></script>
+    <script>
+      // Test to make sure the backend doesn't depend on Object.create
+      // or ES6 globals
+      Object.create = null;
+      Map = null;
+      Set = null;
+      WeakMap = null;
+
+    </script>
+  </body>
+
 </html>
