--- a/test/regression/16.1.html
+++ b/test/regression/16.1.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16.3</title>
+    <title>React 16.1</title>
     <link rel="stylesheet" href="styles.css" />
 
-    <script src="https://unpkg.com/react@16.3/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.3/umd/react-dom.development.js"></script>
+    <script type="text/javascript">
+      // Enable DevTools to inspect React inside of an <iframe>
+      // This must run before React is loaded
+      __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
+    </script>
+
+    <script src="https://unpkg.com/react@16.1/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.1/umd/react-dom.development.js"></script>
     
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
