--- a/test/regression/16.2.html
+++ b/test/regression/16.2.html
@@ -2,14 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16.7</title>
+    <title>React 16.2</title>
     <link rel="stylesheet" href="styles.css" />
 
-    <script src="https://unpkg.com/scheduler@next/umd/scheduler.development.js"></script>
-    <script src="https://unpkg.com/scheduler@next/umd/scheduler-tracing.development.js"></script>
-    <script src="https://unpkg.com/react@next/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@next/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/react-cache@next/umd/react-cache.development.js"></script>
+    <script type="text/javascript">
+      // Enable DevTools to inspect React inside of an <iframe>
+      // This must run before React is loaded
+      __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
+    </script>
+
+    <script src="https://unpkg.com/react@16.2/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.2/umd/react-dom.development.js"></script>
     
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
