Refactored verion tests to share a single script file (for simplicity)

--- a/test/regression/14.9.html
+++ b/test/regression/14.9.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16.7</title>
+    <title>React 16.0</title>
     <link rel="stylesheet" href="styles.css" />
 
     <script type="text/javascript">
@@ -11,11 +11,8 @@
       __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
     </script>
 
-    <script src="https://unpkg.com/scheduler@next/umd/scheduler.development.js"></script>
-    <script src="https://unpkg.com/scheduler@next/umd/scheduler-tracing.development.js"></script>
-    <script src="https://unpkg.com/react@next/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@next/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/react-cache@next/umd/react-cache.development.js"></script>
+    <script src="https://unpkg.com/react@0.14.9/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@0.14.9/dist/react-dom.js"></script>
     
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
