--- a/test/regression/16.6.html
+++ b/test/regression/16.6.html
@@ -31,7 +31,7 @@
       <code>open http://localhost:9000/16.html</code>
     </div>
 
-    <script src="16.js" type="text/babel"></script>
+    <script src="shared.js" type="text/babel"></script>
 
     <!--
       This is a great way to try React but it's not suitable for production.
