--- a/test/regression/index.html
+++ b/test/regression/index.html
@@ -14,5 +14,7 @@
     <iframe src="16.2.html"></iframe>
     <iframe src="16.1.html"></iframe>
     <iframe src="16.0.html"></iframe>
+    <iframe src="15.6.html"></iframe>
+    <iframe src="14.9.html"></iframe>
   </body>
 </html>
