Added Canary build to regression test harness

--- a/test/regression/16.2.html
+++ b/test/regression/16.2.html
@@ -25,7 +25,7 @@
       <br/><br/>
       <code>npm install -g pushstate-server</code><br/>
       <code>pushstate-server .</code><br/>
-      <code>open http://localhost:9000/16.html</code>
+      <code>open <a href="http://localhost:9000/test/regression/16.2.html">http://localhost:9000/test/regression/16.2.html</a></code>
     </div>
 
     <script src="shared.js" type="text/babel"></script>
