--- a/test/regression/15.6.html
+++ b/test/regression/15.6.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16.0</title>
+    <title>React 15.6</title>
     <link rel="stylesheet" href="styles.css" />
 
     <script type="text/javascript">
@@ -25,7 +25,7 @@
       <br/><br/>
       <code>npm install -g pushstate-server</code><br/>
       <code>pushstate-server .</code><br/>
-      <code>open http://localhost:9000/16.html</code>
+      <code>open <a href="http://localhost:9000/test/regression/15.6.html">http://localhost:9000/test/regression/15.6.html</a></code>
     </div>
 
     <script src="shared.js" type="text/babel"></script>
