--- a/test/regression/16.6.html
+++ b/test/regression/16.6.html
@@ -28,7 +28,7 @@
       <br/><br/>
       <code>npm install -g pushstate-server</code><br/>
       <code>pushstate-server .</code><br/>
-      <code>open http://localhost:9000/16.html</code>
+      <code>open <a href="http://localhost:9000/test/regression/16.6.html">http://localhost:9000/test/regression/16.6.html</a></code>
     </div>
 
     <script src="shared.js" type="text/babel"></script>
