--- a/test/regression/index.html
+++ b/test/regression/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16</title>
+    <title>React DevTools regression test</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <iframe src="canary.html"></iframe>
     <iframe src="16.7.html"></iframe>
     <iframe src="16.6.html"></iframe>
     <iframe src="16.5.html"></iframe>
