Added 16.7 final release and @next to regression test harness

--- a/test/regression/index.html
+++ b/test/regression/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <iframe src="canary.html"></iframe>
+    <iframe src="next.html"></iframe>
     <iframe src="16.7.html"></iframe>
     <iframe src="16.6.html"></iframe>
     <iframe src="16.5.html"></iframe>
