--- a/test/regression/next.html
+++ b/test/regression/next.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 16.7</title>
+    <title>React next</title>
     <link rel="stylesheet" href="styles.css" />
 
     <script type="text/javascript">
@@ -11,11 +11,11 @@
       __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
     </script>
 
-    <script src="https://unpkg.com/scheduler@0.12.0/umd/scheduler.development.js"></script>
-    <script src="https://unpkg.com/scheduler@0.12.0/umd/scheduler-tracing.development.js"></script>
-    <script src="https://unpkg.com/react@16.7/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.7/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/react-cache@2.0.0-alpha.1/umd/react-cache.development.js"></script>
+    <script src="https://unpkg.com/scheduler@next/umd/scheduler.development.js"></script>
+    <script src="https://unpkg.com/scheduler@next/umd/scheduler-tracing.development.js"></script>
+    <script src="https://unpkg.com/react@next/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@next/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react-cache@next/umd/react-cache.development.js"></script>
     
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -28,7 +28,7 @@
       <br/><br/>
       <code>npm install -g pushstate-server</code><br/>
       <code>pushstate-server .</code><br/>
-      <code>open <a href="http://localhost:9000/test/regression/16.7.html">http://localhost:9000/test/regression/16.7.html</a></code>
+      <code>open <a href="http://localhost:9000/test/regression/next.html">http://localhost:9000/test/regression/next.html</a></code>
     </div>
 
     <script src="shared.js" type="text/babel"></script>
